--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
     </div>
   </div>
 
-  <div *ngIf="isResultShow" class="result">
+  <div *ngIf="isResultShow" class="results">
     <div [ngSwitch]="theResult">
       <ng-template [ngSwitchCase]= "0"> <h1> You're the winner! </h1></ng-template>
       <ng-template [ngSwitchCase]= "1"> <h1> You lose. </h1> </ng-template>
